# aa-project

./: .gitignore  README.md  docker-compose.yml
aa-backend-service/: Dockerfile  README.md  main.py  pyproject.toml
aa-backend-service/aa_backend_service/cron_job/: __init__.py  aa_metrics.py
aa-backend-service/aa_backend_service/db/: __init__.py  account_aggregator.py
aa-backend-service/aa_backend_service/routers/: account_aggregator.py
aa-backend-service/aa_backend_service/services/: aa.py
aa-backend-service/tests/: test_api.py
aa-ui/: Dockerfile
aa-ui/api/: aa_metrics.tsx
aa-ui/components/ApiDoc/: index.tsx
